Restructure gradle scripts